@@ -149,5 +149,73 @@ test hwloc-topology-convert-4.8 "cpu -> node conversion, strict, non-numa, not e
     T destroy
 } -result {}
 
+# - -- --- ----- -------- ------------- ---------------------
+# numa node 0 => cpus 0-3
+# cpu 0 => numa node 0
+
+test hwloc-topology-convert-5.1 "node -> cpu conversion, numa, empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -to_cpuset {}
+} -cleanup {
+    T destroy
+} -result {}
+
+test hwloc-topology-convert-5.2 "node -> cpu conversion, numa, non empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -to_cpuset 0
+} -cleanup {
+    T destroy
+} -result 0-3
+
+test hwloc-topology-convert-5.3 "node -> cpu conversion, strict, numa, empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -strict -to_cpuset {}
+} -cleanup {
+    T destroy
+} -result {}
+
+test hwloc-topology-convert-5.4 "node -> cpu conversion, strict, numa, empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -strict -to_cpuset 0
+} -cleanup {
+    T destroy
+} -result 0-3
+
+test hwloc-topology-convert-5.5 "cpu -> node conversion, numa, empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -to_nodeset {}
+} -cleanup {
+    T destroy
+} -result {}
+
+test hwloc-topology-convert-5.6 "cpu -> node conversion, numa, not empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -to_nodeset 0
+} -cleanup {
+    T destroy
+} -result 0
+
+test hwloc-topology-convert-5.7 "cpu -> node conversion, strict, numa, empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -strict -to_nodeset {}
+} -cleanup {
+    T destroy
+} -result {}
+
+test hwloc-topology-convert-5.8 "cpu -> node conversion, strict, numa, not empty" -setup {
+    hwloc create T -set_synthetic {node:3 pu:4}
+} -body {
+    T convert -strict -to_nodeset 0
+} -cleanup {
+    T destroy
+} -result 0
+
 # # ## ### ##### ######## ############# #####################
 tcltest::cleanupTests
